fix: 공백 포함 URL 다운로드 실패 및 DOWNLOADING 상태 고착 수정
- FileDownloadHttpClient: URI.create() 대신 URL→URI 변환으로 공백 자동 인코딩
- DownloadExecutionCoordinator: start+persist 이후 try-catch safety net 추가
- Stage DB 정리 SQL 추가 (DOWNLOADING stuck 건 FAILED 처리)